# DSP-Indicator

./: .gitignore  Cargo.toml  LICENSE  README.md  REFERENCE  kpss.rs
PAPER/: abstruct_model.typ  arma.typ  confident_interval.typ  ema.typ  main.typ  reference  shortcut.typ
src/: main.rs
src/data/: SPX.csv  SPX_log.csv
src/module/: eval.rs  mod.rs  workflow.rs
src/module/data/: fetch_data.rs  mod.rs  read_csv.rs  save_data.rs
src/module/indicator/: decide.rs  eval.rs  mod.rs  prediction.rs
src/module/model/: ar.rs  arima.rs  arma.rs  differencing.rs  ema.rs  mod.rs  pacf.rs  sma.rs
src/module/plot/: mod.rs  plot_fft.rs  plot_graph.rs
src/module/single/: arma.rs  ema_sma.rs  fast_slow.rs  mod.rs
src/module/util/: mod.rs
src/module/util/debug/: mod.rs  train.rs
src/module/util/function/: evaluate_cross_over.rs  fft_spectrum.rs  find_real.rs  mod.rs  smooth_ma.rs
src/module/util/math/: mod.rs  percent.rs
src/module/util/stationarity/: adf.rs  kpss.rs  mod.rs
src/module/util/windows/: hann.rs  mod.rs
trading_view/: arma.trading_view  ema_fast_slow.trading_view
