[package]
name = "DSP_RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3.1"
plotters = { version = "0.3.7", default-features = false, features = ["chrono", "bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
rustfft = "6.4.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
yahoo_finance_api = "4.1.0"
chrono = "0.4.42"
ndarray = "0.16.1"
indicatif = "0.18.0"
nalgebra = "0.34.1"

[lints.rust]
unsafe_code = "forbid"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "target-feature=+avx2,+fma"]
